WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234662
[LFC][IFC] InlineContentBreaker should know about the hanging content width
https://bugs.webkit.org/show_bug.cgi?id=234662
Summary
[LFC][IFC] InlineContentBreaker should know about the hanging content width
alan
Reported
2021-12-24 07:01:59 PST
ssia
Attachments
Patch
(10.23 KB, patch)
2021-12-24 08:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-12-24 08:39:47 PST
Created
attachment 447941
[details]
Patch
EWS
Comment 2
2021-12-25 07:37:26 PST
Committed
r287437
(
245572@main
): <
https://commits.webkit.org/245572@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447941
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-25 07:38:17 PST
<
rdar://problem/86905110
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug