[LFC][IFC] InlineContentBreaker should know about the hanging content width https://bugs.webkit.org/show_bug.cgi?id=234662

Reviewed by Antti Koivisto.

Pass in the trailing hanging content width to InlineContentBreaker as this specific type
of content (e.g. pre-wrap whitespace) should be ignored when checking for content fit.

(Note that we already ignore it through the shouldKeepEndOfLineWhitespace() call in
InlineContentBreaker::processOverflowingContent, but this patch is in preparation for making hanging content logic
more inline with the spec. -and also removing shouldKeepEndOfLineWhitespace needs some more changes.)

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
* layout/formattingContexts/inline/InlineContentBreaker.h:
* layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::hangingTrailingContentWidth const):
(WebCore::Layout::Line::hangingWhitespaceWidth const): Deleted.
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::layoutInlineContent):
(WebCore::Layout::LineBuilder::handleInlineContent):



Canonical link: https://commits.webkit.org/245572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287437 268f45cc-cd09-0410-ab3c-d52691b4dbfc